--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # cache
   shared_preferences: ^2.0.6
 
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.8.5
+
 
 dev_dependencies:
   flutter_test:
