--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   universal_html: ^2.0.4
 
   # http
-  http: ^0.13.1
+  http: ^1.0.0
 
   # utils
   mailto: ^2.0.0
@@ -32,17 +32,21 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   animated_text_kit: ^4.2.1
-  font_awesome_flutter: ^10.1.0
+  font_awesome_flutter: ^10.5.0
+  google_fonts: ^6.0.0
 
   # state management
-  provider: ^6.0.1
+  provider: ^6.0.5
 
   # cache
   shared_preferences: ^2.0.6
 
   firebase_core: ^2.15.1
-  cloud_firestore: ^4.8.5
+  cloud_firestore: ^4.9.1
+  intl: ^0.18.1
 
+dependency_overrides:
+  firebase_core_platform_interface: 4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -72,19 +76,3 @@ flutter:
       fonts:
         - asset: fonts/agustina/agustina.otf
     
-    - family: Montserrat
-      fonts:
-        - asset: fonts/montserrat/montserrat.ttf
-    
-    - family: Poppins
-      fonts:
-        - asset: fonts/poppins/Poppins-Regular.ttf
-        - asset: fonts/poppins/Poppins-Light.ttf
-        - asset: fonts/poppins/Poppins-Bold.ttf
-          weight: 900
-        - asset: fonts/poppins/Poppins-Medium.ttf
-          weight: 300
-        - asset: fonts/poppins/Poppins-SemiBold.ttf
-          weight: 500
-        - asset: fonts/poppins/Poppins-Italic.ttf
-          style: italic
