feat: upgrade to 3.22.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,35 +15,35 @@ dependencies:
     sdk: flutter
 
   # github
-  github: ^9.2.0
+  github: ^9.24.0
 
   # web related
-  flutter_html: any
+  flutter_html: ^3.0.0-beta.2
   url_strategy: ^0.2.0
-  universal_html: ^2.0.4
+  universal_html: ^2.2.4
 
   # http
-  http: ^1.0.0
+  http: ^1.2.1
 
   # utils
   mailto: ^2.0.0
-  flip_card: ^0.6.0
-  url_launcher: ^6.1.2
-  cupertino_icons: ^1.0.2
-  carousel_slider: ^4.0.0
-  animated_text_kit: ^4.2.1
-  font_awesome_flutter: ^10.5.0
-  google_fonts: ^6.0.0
+  flip_card: ^0.7.0
+  url_launcher: ^6.2.6
+  cupertino_icons: ^1.0.8
+  carousel_slider: ^4.2.1
+  animated_text_kit: ^4.2.2
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
 
   # state management
-  provider: ^6.0.5
+  provider: ^6.1.2
 
   # cache
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.2.3
 
-  firebase_core: ^2.15.1
-  cloud_firestore: ^4.9.1
-  intl: ^0.18.1
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.3
+  intl: ^0.19.0
 
 dependency_overrides:
   firebase_core_platform_interface: 4.8.0
@@ -52,7 +52,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
