--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "Thanh",
-    "short_name": "Thanh",
+    "name": "cv_folio",
+    "short_name": "cv_folio",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#000000",
+    "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Live portfolio using flutter 2.0",
+    "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
@@ -18,6 +18,18 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icons/Icon-maskable-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icons/Icon-maskable-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
